assets/css/blog.css
.blog_container {
    display: grid;
    height: max-content;
    width: max-content;
    grid-template-columns: repeat(3, 1fr);
    grid-column-gap: 100px;
    grid-row-gap: 70px;
    margin: 0 auto;
}
.blog_item_container {
  height: 500px;
  width: 320px;
  /* box-shadow: 5px 5px 5px gray; */
  background-color:none;
  border-radius: 5px;
  padding: 10px;
  border:0.4px solid gray;
  /* border-radius: 7px; */
/* background: #efefef; */
box-shadow:  5px 5px 19px #a4a4a4,
             -5px -5px 19px #ffffff;
}
.blog_item_head {
 font-size: 20px;
 font-weight: 900;
 color: black;
 max-width: 100%;
 margin: 20px;
 font-family: Arvo;
 word-wrap: break-word;
}
.blog_item_image{
  background-size: cover;
  background-repeat: no-repeat;
  height: 200px;
  width: 250px;
  border-radius: 15px;
  box-shadow: 8px 8px 8px rgb(158, 158, 158);
  margin: 15px;
  overflow: hidden;
  
}
.blog_item_description {
 color: rgb(19, 19, 19);
 margin: 20px;
 font-size: 15px;
 font-weight: 900;
}
.blog_item_image img {
    width: 100%;
    height: 100%;
    transition: 0.5s all ease-in-out;
}
.blog_item_head:hover {
    color: orange;
}
.blog_item_image:hover img{
   transform: scale(1.3);
}

.title {
    font-size: 40px;
    color: black;
    font-weight: 900;
    margin-left: 45%;
    text-shadow: 7px 7px 7px rgb(172, 172, 172);
}

@media(max-width:1024px){
  .blog_container{
  grid-template-columns: repeat(2, 1fr);
  }
}

@media (max-width: 767px){
  .blog_container{
    grid-template-columns: none;
  }

  .blog_item_container{
    height: auto;
  }
}

